<resources>
  <string name="app_name">AirNow</string>
  <string name="title_home">AirNow</string>
  <string name="title_dashboard">Chart</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_smart_config">Smart Config</string>
  <string name="title_settings">Settings</string>
  <string name="hint_text">Locations</string>

  <!-- Smart config-->
  <string name="ssid_title">SSID: </string>
  <string name="bssid_title">BSSID: </string>
  <string name="password_title">Password: </string>
  <string name="device_count_title">Device count: </string>
  <string name="package_broadcast">Broadcast</string>
  <string name="package_multicast">Multicast</string>
  <string name="confirm">Confirm</string>
  <string name="wifi_5g_message">Device don\'t support 5G Wifi, please make sure the currently connected Wifi is 2.4G</string>
  <string name="location_disable_message">Location(GPS) is disable</string>
  <string name="no_wifi_connection">No Wifi connection</string>
  <string name="configuring_message">Esptouch is configuring, please wait for a moment…</string>
  <string name="configure_wifi_change_message">Wifi disconnected or changed</string>
  <string name="configure_result_failed">EspTouch failed</string>
  <string name="configure_result_failed_port">Create Esptouch task failed, the EspTouch port could be used by other thread</string>
  <string name="configure_result_success">EspTouch success</string>
  <string name="configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>
</resources>
