<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingLeft="10dp"
  android:paddingTop="10dp"
  android:paddingRight="10dp"
  tools:context=".ui.smartconfig.SmartConfigEsp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/ap_ssid_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:singleLine="true"
      android:text="@string/ssid_title"
      android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
      android:id="@+id/ap_ssid_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginLeft="4dp"
      android:singleLine="true"
      android:textAppearance="?android:attr/textAppearanceMedium" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/ap_bssid_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:singleLine="true"
      android:text="@string/bssid_title"
      android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
      android:id="@+id/ap_bssid_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="4dp"
      android:layout_marginLeft="4dp"
      android:singleLine="true"
      android:textAppearance="?android:attr/textAppearanceMedium" />

  </LinearLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/ap_password_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="@string/password_title">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/ap_password_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:singleLine="true" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/device_count_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="@string/device_count_title">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/device_count_edit"
      android:layout_width="150dp"
      android:layout_height="wrap_content"
      android:inputType="number" />
  </com.google.android.material.textfield.TextInputLayout>

  <RadioGroup
    android:id="@+id/package_mode_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">

    <RadioButton
      android:id="@+id/package_broadcast"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/package_broadcast" />

    <RadioButton
      android:id="@+id/package_multicast"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:text="@string/package_multicast" />
  </RadioGroup>

  <TextView
    android:id="@+id/message"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:textColor="@android:color/holo_red_dark" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/confirm_btn"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/confirm" />

</LinearLayout>